# md4

./: .gitignore  CLAUDE.md  LICENSE  README.md  REPOSITORY_MAP.md  analyze_msg_results.py  eval_msg.py  eval_msg_sp.py  plot_molecule.py  prepare_msg_eval.py  prepare_pubchem_train.py  prepare_safe.py  prepare_sentencepiece_tokenizer.py  prepare_tokenizer.py  prepare_tokenizer_without_formula.py  pyproject.toml  test_tokenizer_output.py
.github/instructions/: uv.instructions.md
data/: sentencepiece_tokenizer.model  sentencepiece_tokenizer_bpe_3000_newcorpus.model  sentencepiece_tokenizer_safe_bpe_1500_split.model  sentencepiece_tokenizer_safe_bpe_4000.model  sentencepiece_tokenizer_safe_bpe_4000_split_number.model  sentencepiece_tokenizer_unigram.model  sentencepiece_tokenizer_unigram_2048.model  sentencepiece_tokenizer_unigram_2048_bpe.model
data/msg/: msg_processed.parquet  msg_text.csv
data/pubchem_large_tokenizer/: tokenizer.json  tokenizer_config.json
data/pubchem_large_tokenizer_2048/: tokenizer.json
data/pubchem_large_tokenizer_2048_noformula/: tokenizer.json
data/smiles_tokenizer/: tokenizer.json
datasets/pubchem_l/: pubchem_l_dataset_builder.py  pubchem_l_dataset_builder_test.py
md4/: checkpoint_utils.py  input_pipeline.py  input_pipeline_msg_finetune.py  input_pipeline_pubchem.py  input_pipeline_pubchem_in_memory.py  input_pipeline_pubchem_large.py  input_pipeline_pubchem_large_text.py  input_pipeline_pubchem_safe.py  input_pipeline_pubchem_streaming.py  main.py  partial_load_utils.py  pubchem_worker.py  rdkit_utils.py  sampling.py  sharded_train.py  sharded_train_v2.py  state_utils.py  train.py
md4/configs/md4/: molecular.py  molecular_finetune.py  molecular_large.py  molecular_xtra_large.py  molecular_xtra_large_finetune.py  molecular_xtra_large_sp.py  molecular_xtra_large_sp_bf16_latest.py  molecular_xtra_large_sp_bf16_multi_host.py  molecular_xtra_large_sp_fp32_latest.py  molecular_xtra_large_sp_gpu.py  molecular_xtra_large_sp_safe_bf16_multi_host.py  molecular_xtra_large_sp_safe_split_bf16_multi_host.py
md4/models/: backward.py  utils.py
md4/models/diffusion/: md4.py
md4/networks/: adapters.py  dit.py  sharded_transformer.py  transformer.py
md4/tokenizers/: README.md  __init__.py  base.py  sentencepiece_tokenizer.py  smiles_tokenizer.py  test_tokenizers.py
md4/utils/: checkpoint_utils.py  learning_rate.py  partial_load_utils.py  pubchem_worker.py  rdkit_utils.py  safe_utils.py  state_utils.py  utils.py  wandb_writer.py
notebooks/: attention.ipynb  morgan.ipynb  partial_load.ipynb  perf.ipynb  safe.ipynb  tokenizer.ipynb
tests/: kernel.py  sharding.py  test_mixed_precision_detailed.py  test_tokenizer_output.py
tf_datasets/pubchem_l/: CITATIONS.bib  README.md  TAGS.txt  checksums.tsv  pubchem_l_dataset_builder.py  rdkit_utils.py
