[project]
name = "md4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "clu>=0.0.12",
    "datasets>=4.0.0",
    "distrax>=0.1.5",
    "grain>=0.2.11",
    "huggingface-hub>=0.33.2",
    "jax[tpu]>=0.6.2; sys_platform == 'linux'",
    "jax>=0.6.2; sys_platform == 'macOS'",
    "matplotlib>=3.10.3",
    "ml-collections>=1.1.0",
    "polars>=1.31.0",
    "rdkit>=2025.3.3",
    "safe-mol>=0.1.13",
    "seaborn>=0.13.2",
    "transformers==4.51.2",
    "torch==2.7.1",
    "tensorflow-datasets>=4.9.9",
    "tf-nightly==2.20.0.dev20250715",
    "tf-keras-nightly>=2.20.0.dev2025062209",
    "tb-nightly>=2.19.0a20250218",
]



[tool.uv]
override-dependencies = ["multiprocess==0.70.12", "dill==0.4.0"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
torchvision = [
  { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
