[project]
name = "md4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clu>=0.0.12",
    "datasets>=4.0.0",
    "distrax>=0.1.5",
    "grain>=0.2.11",
    "huggingface-hub>=0.33.2",
    "jax[tpu]>=0.6.2; sys_platform == 'linux'",
    "jax>=0.6.2; sys_platform == 'macOS'",
    "matplotlib>=3.10.3",
    "ml-collections>=1.1.0",
    "polars>=1.31.0",
    "rdkit>=2025.3.3",
    "safe-mol>=0.1.13",
    "seaborn>=0.13.2",
    "transformers==4.51.2",
    "torch==2.7.1",
    "tf-nightly-cpu>=2.21.0.dev20250722",
    "tb-nightly>=2.19.0a20250218",
    "tfds-nightly>=4.9.9.dev202507250045",
    "tf-keras-nightly>=2.16.0.dev2024021410",
]



[tool.uv]
override-dependencies = ["multiprocess==0.70.12", "dill==0.4.0"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
torchvision = [
  { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
