[project]
name = "md4"
version = "0.1.0"
description = "Structural Elucidation of MS/MS spectra data using generative models"
readme = "README.md"
license = "LICENSE"
requires-python = ">=3.12.11"
dependencies = [
    "clu>=0.0.12",
    "datasets>=4.0.0",
    "distrax>=0.1.5",
    "grain>=0.2.11",
    "huggingface-hub>=0.33.2",
    "jax[tpu]>=0.6.2; sys_platform == 'linux'",
    "jax>=0.6.2; sys_platform == 'macOS'",
    "matplotlib>=3.10.3",
    "ml-collections>=1.1.0",
    "polars>=1.31.0",
    "rdkit>=2025.3.3",
    "safe-mol>=0.1.13",
    "seaborn>=0.13.2",
    "transformers==4.51.2",
    "torch==2.7.1",
    "tokenizers==0.21.4",
    "sentencepiece>=0.2.1",
    "tensorflow-text==2.19",
    "tensorboard==2.19.0",
    "tensorflow==2.19.0",
    "tensorflow-datasets>=4.9.9",
    "tf-keras>=2.19.0",
    "xprof>=2.20.5",
    "wandb>=0.21.0",
    "flax>=0.10.7",
]



[tool.uv]
override-dependencies = ["multiprocess==0.70.12", "dill==0.4.0"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
torchvision = [
  { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
